--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="<%=require('./images/ava.jpg')%>">
-    <title>Место</title>
+    <title>Новое Место</title>
 </head>
 
 <body class="body">
@@ -35,7 +35,7 @@
     <div class="popup popup_edit">
         <div class="popup__container">
             <button type="button" class="popup__close"></button>
-            <h2 class="popup__title">Редактировать профиль</h2>
+            <h2 class="popup__title">Изменить профиль</h2>
             <form name="edit-profile" class="popup__form" novalidate>
                 <div class="popup__wraper">
                     <input type="text" name="name" value="Жак-Ив Кусто" required class="popup__item popup__name" minlength="2"
